Bug 841590 - Bluetooth: Fix hashtable remove. r=bent, a=shira+