dom/bluetooth/BluetoothService.cpp
@@ -264,7 +264,7 @@ RemoveObserversExceptBluetoothManager
    void* arg)
 {
   if (!key.EqualsLiteral("/")) {
-    static_cast<BluetoothService*>(arg)->RemoveObserverFromTable(key);
+    return PL_DHASH_REMOVE;
   }
 
   return PL_DHASH_NEXT;
@@ -471,7 +471,7 @@ BluetoothService::SetEnabled(bool aEnabled)
      * for more details.
      */
     mBluetoothSignalObserverTable.Enumerate(
-      RemoveObserversExceptBluetoothManager, this);
+      RemoveObserversExceptBluetoothManager, nullptr);
   }
 
   /**
